--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
   "devDependencies": {
     "git-scripts": "^0.2.1",
     "surge": "^0.19.0"
+  },
+  "git": {
+  "scripts": {
+    "pre-push": "surge --project ./ --domain fcc-leaders.surge.sh"
   }
+}
 }
