--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
   "homepage": "https://github.com/benjaminadk/fcc-leaders#readme",
   "devDependencies": {
     "git-scripts": "^0.2.1",
+    "node": "0.0.0",
     "surge": "^0.19.0"
   },
   "git": {
-  "scripts": {
-    "pre-push": "surge --project /home/ubuntu/workspace/fcc-leaders/ --domain fcc-leaders.surge.sh"
+    "scripts": {
+      "pre-push": "surge --project /home/ubuntu/workspace/fcc-leaders/ --domain fcc-leaders.surge.sh"
+    }
   }
-}
 }
